<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/tv_img_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/alpukat"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_name"
            style="@style/TextContent.Black"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/fruits_name"
            android:textSize="32sp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/tv_english_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/fruits_name"
            android:textColor="@color/white"
            app:chipBackgroundColor="@color/green"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/tv_detail"
            style="@style/TextContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:lineSpacingMultiplier="1"
            android:text="@string/detail"
            android:textColor="@android:color/black" />

        <TextView
            style="@style/TextContent.Subtitle"
            android:layout_marginBottom="8dp"
            android:text="@string/benefit"
            android:textColor="@color/green_dark" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                tools:ignore="UselessParent">

                <TextView
                    style="@style/TextSpec.Field"
                    android:gravity="end"
                    android:text="@string/numbers" />

                <TextView
                    android:id="@+id/tv_benefit"
                    style="@style/TextSpec.Value"
                    android:text="@string/list_benefit" />
            </TableRow>
        </TableLayout>
    </LinearLayout>
</ScrollView>